--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "license": "ISC",
   "dependencies": {
     "cosmiconfig": "^6.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "moment": "^2.24.0",
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
     "typescript": "^3.7.4"
   },
   "traefik-oauth-provider": {
+    "csrfCookieName": "_traefik-oauth-provider-csrf",
     "port": 8080,
     "provider": "",
     "providers": {
