--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.4",
     "cosmiconfig": "^6.0.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.2",
     "typescript": "^3.7.4"
   },
