--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prebuild": "",
     "prestart": "npm run build",
     "start": "node ./dist/server.js",
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "author": "",
   "license": "ISC",
@@ -17,11 +17,13 @@
     "cosmiconfig": "^6.0.0",
     "express": "^4.17.1",
     "moment": "^2.24.0",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.2",
     "@types/jest": "^24.0.24",
+    "@types/request": "^2.48.4",
     "jest": "^24.9.0",
     "ts-jest": "^24.2.0",
     "ts-node": "^8.5.4",
@@ -29,7 +31,10 @@
   },
   "jest": {
     "preset": "ts-jest",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "testMatch": [
+      "**/*.spec.ts"
+  ]
   },
   "traefik-oauth-provider": {
     "authCookieName": "_traefik-oauth-provider-user",
@@ -39,7 +44,7 @@
     "providers": {
       "home-assistant": {
         "client_id": "http://localhost:8080",
-        "url": "https://hass.johnluetke.com"
+        "url": "https://home-assistant.io"
       }
     },
     "secret": "sooper-dooper",
